flux/apps/immich/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media"
    gethomepage.dev/name: Immich
    gethomepage.dev/icon: immich.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=immich"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
    - name: public-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - photos.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
          weight: 1
